k8s/backend-deployment.yaml
# k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment # 디플로이먼트의 이름
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend # 'app: backend' 라벨이 붙은 Pod를 관리
  template: # --- Pod 명세 ---
    metadata:
      labels:
        app: backend # Pod에 'app: backend' 라벨을 붙임
    spec:
      containers:
        - name: backend
          # [중요!] CI/CD가 푸시할 GitHub 이미지 주소
          image: ghcr.io/igne0us/fullstack-portfolio/backend:latest:latest
          ports:
            - containerPort: 8080 # Spring Boot가 8080 포트를 사용
